[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://sprite/title_screen/bg2.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/SnesItalic-vmAPZ.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://audio/title_screen/The One And Only - Mega Man X Opening Stage Remix (online-audio-converter.com).ogg" type="AudioStream" id=4]
[ext_resource path="res://sprite/title_screen/MMZXLogo.png" type="Texture" id=5]
[ext_resource path="res://video/title screen/Mega-Man-Zero-3-Cannonball-Lyrics.ogv" type="VideoStream" id=6]
[ext_resource path="res://audio/ZX/Common/SE_COMMON2.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/title_screen/accept.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.0705882, 0.403922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.235294, 0.364706, 0.964706, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, -40 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
centered = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 382, 0 )
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]

[node name="accept" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 383, 0 )
stream = ExtResource( 9 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 258.429, 296.58 )
scale = Vector2( 0.860585, 0.795022 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 570.0
margin_right = 240.0
margin_bottom = 595.0
grow_vertical = 2
custom_styles/normal = SubResource( 1 )
text = "nguyentruongan.it.dlu@gmail.com"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 150.0
margin_top = 350.0
margin_right = 290.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_right = 140.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 140.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGame" type="TextureButton" parent="Menu/HBoxContainer/Buttons"]
margin_right = 140.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
shortcut_in_tooltip = false
button_mask = 0

[node name="Label" type="Label" parent="Menu/HBoxContainer/Buttons/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 44.0
focus_mode = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.156863, 0.921569, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "New Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="Menu/HBoxContainer/Buttons"]
margin_top = 54.0
margin_right = 140.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Menu/HBoxContainer/Buttons/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.156863, 0.921569, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 5
text = "Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Menu/HBoxContainer/Buttons"]
margin_top = 108.0
margin_right = 140.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Menu/HBoxContainer/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.156863, 0.921569, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "EXIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_left = -5.0
margin_right = 802.0
margin_bottom = 616.0
stream = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VideoPlayer"]
margin_left = 521.355
margin_top = 574.368
margin_right = 790.355
margin_bottom = 588.368
custom_colors/font_color = Color( 0.933333, 0.592157, 0.00784314, 1 )
text = "  Press \"Esc\" to return to the main screen!"

[node name="Audio_BG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="TimerVideo" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_entered" from="Menu/HBoxContainer/Buttons/NewGame" to="." method="_on_NewGame_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/Buttons/Continue" to="." method="_on_Continue_focus_entered"]
[connection signal="focus_entered" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="TimerVideo" to="." method="_on_TimerVideo_timeout"]
